// file: request.proto
syntax = "proto3";
package helloworld;
option go_package="./types";

message NewOrderAdd {
  int32 time       = 1;
  int32 userid     = 2;
  int32 price_e4   = 3;
  string desc      = 4;
  int32 order_type = 5; // new added
}