// file: request.proto
syntax = "proto3";
package helloworld;
option go_package="./types";

message NewOrderModifyLabelTypeOne {
  int32 time       = 1;
  int32 userid     = 2;
  string price_e4  = 3; // change label type of price from int32 to string
  string desc      = 4;
}